third_party/move/move-compiler-v2/tests/reference-safety/bug_12817_order_dependency.exp

Diagnostics:
error: cannot read local `r2` since it is mutably borrowed
   ┌─ tests/reference-safety/bug_12817_order_dependency.move:14:9
   │
12 │         let r1 = &mut x;
   │                  ------ previously mutably borrowed here
13 │         let r2 = &mut x;
14 │         *r2 + *r1 // <- changed order here
   │         ^^^   --- conflicting reference `r1` used here
   │         │
   │         read attempted here
